clusters/pk3s/multi-scrobbler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-scrobbler
  namespace: multi-scrobbler
  labels:
    app: multi-scrobbler
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: multi-scrobbler
  template:
    metadata:
      labels:
        app: multi-scrobbler
      annotations:
        secrets-revision: "1"
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 1000
      containers:
        - name: multi-scrobbler
          image: foxxmd/multi-scrobbler:0.19.2
          ports:
            - containerPort: 9078
              name: http
          volumeMounts:
            - name: data
              mountPath: /config
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: multi-scrobbler-data
