clusters/pk3s/multi-scrobbler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-scrobbler
  namespace: multi-scrobbler
  labels:
    app: multi-scrobbler
spec:
  selector:
    app: multi-scrobbler
  ports:
    - name: http
      port: 9078
      targetPort: http
